@@ -1,5 +1,7 @@
 2.4.3 Released ??? November 2018
 
+* Add 'clabel' command -- draw labels for colorbar. Should be used *after* drawing colorbar!
+* Extend 'ctick' command
 * Add subpixel smoothing for masks
 * Boxes around text (style '@') now use actual height and position of the text.
 * Add mask to EPS export. Note, mask angles are reduced to 45*(0,1,...7) degrees for decreasing pattern size in the EPS.
